--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+dataset_car/UAH-DRIVESET-v1/*
+Dados_app/DELETEME.txt
+dataset_car/movie.gif
+dataset_car/result_image.png
