untrack generated images

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,33 @@ dataset_car/UAH-DRIVESET-v1/*
 Dados_app/DELETEME.txt
 dataset_car/movie.gif
 dataset_car/result_image.png
+dataset_car/images/fig_00.png
+dataset_car/images/fig_01.png
+dataset_car/images/fig_02.png
+dataset_car/images/fig_03.png
+dataset_car/images/fig_04.png
+dataset_car/images/fig_05.png
+dataset_car/images/fig_06.png
+dataset_car/images/fig_07.png
+dataset_car/images/fig_08.png
+dataset_car/images/fig_09.png
+dataset_car/images/fig_10.png
+dataset_car/images/fig_11.png
+dataset_car/images/fig_12.png
+dataset_car/images/fig_13.png
+dataset_car/images/fig_14.png
+dataset_car/images/fig_15.png
+dataset_car/images/fig_16.png
+dataset_car/images/fig_17.png
+dataset_car/images/fig_18.png
+dataset_car/images/fig_19.png
+dataset_car/images/fig_20.png
+dataset_car/images/fig_21.png
+dataset_car/images/fig_22.png
+dataset_car/images/fig_23.png
+dataset_car/images/fig_24.png
+dataset_car/images/fig_25.png
+dataset_car/images/fig_26.png
+dataset_car/images/fig_27.png
+dataset_car/images/fig_28.png
+dataset_car/images/fig_29.png
