--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ Dados_app/DELETEME.txt
 dataset_car/movie.gif
 dataset_car/result_image.png
 dataset_car/images/*
+status_invest/acoes_brasil.csv
