add fiis support

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ dataset_car/RealData/DELETEME_ACCELERATION.txt
 dataset_car/RealData/DELETEME.txt
 dataset_car/RealData/DELETEME_GPS.txt
 dataset_car/RealData/images/*
+status_invest/fiis.csv
