--- a/.gitignore
+++ b/.gitignore
@@ -165,11 +165,7 @@ dataset_car/movie.gif
 dataset_car/result_image.png
 dataset_car/images/*
 status_invest/acoes_brasil.csv
-dataset_car/RealData/DELETEME_ACCELERATION.txt
-.gitignore
-dataset_car/RealData/DELETEME.txt
-dataset_car/RealData/DELETEME_GPS.txt
-dataset_car/RealData/images/*
+dataset_car/RealData/*
 status_invest/fiis.csv
 dataset_car/test.ipynb
 dataset_car/test2.ipynb
