--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ status_invest/fiis.csv
 dataset_car/test.ipynb
 dataset_car/test2.ipynb
 possible_features.txt
+dataset_car/crimes.html
+dataset_car/crimes_other.html
