tried using geopandas but is not equivalent

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ dataset_car/crimes.html
 dataset_car/crimes_other.html
 dataset_car/map.html
 dataset_car/teste.pdf
+dataset_car/SP_Microrregioes_2022.zip
+dataset_car/SP_Municipios_2022.zip
+dataset_car/BR_Municipios_2022.zip
