creating corrupted pdfs

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ dataset_car/teste.pdf
 dataset_car/SP_Microrregioes_2022.zip
 dataset_car/SP_Municipios_2022.zip
 dataset_car/BR_Municipios_2022.zip
+dataset_car/handler.py
