resolved obd variable names for speed

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ dataset_car/SP_Microrregioes_2022.zip
 dataset_car/SP_Municipios_2022.zip
 dataset_car/BR_Municipios_2022.zip
 dataset_car/handler.py
+dataset_car/crimes_por_bairro_sao_paulo.csv
