weird receipt results

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,4 @@ food/receipt_opencv/Data Extraction - Remote Assignment - Google Docs.pdf
 food/receipt_opencv/ff8e6691.jpeg
 kaggle/apple_quality/apple_quality.csv
 food/receipt_opencv.zip
+food/result.png
