ignore data files

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,13 @@ food/receipt_opencv/ff8e6691.jpeg
 kaggle/apple_quality/apple_quality.csv
 food/receipt_opencv.zip
 food/result.png
+food/bla.txt
+food/poetry.lock
+food/pyproject.toml
+food/pao_de_acucar_1.jpeg
+food/text_ocr/*
+food/text_ocr.zip
+food/pao_de_acucar/nota_saddi.webp
+food/pao_de_acucar/pao_de_acucar_1.jpeg
+food/pao_de_acucar/pao_de_acucar_2.jpeg
+food/pao_de_acucar/pao_de_acucar_3.jpeg
