--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,6 @@ food/pao_de_acucar/nota_saddi.webp
 food/pao_de_acucar/pao_de_acucar_1.jpeg
 food/pao_de_acucar/pao_de_acucar_2.jpeg
 food/pao_de_acucar/pao_de_acucar_3.jpeg
+MuffiChiuaua/test/*
+MuffiChiuaua/train/*
+MuffiChiuaua/archive.zip
