get stock data with post

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ food/pao_de_acucar/pao_de_acucar_3.jpeg
 MuffiChiuaua/test/*
 MuffiChiuaua/train/*
 MuffiChiuaua/archive.zip
+status_invest/response.json
