--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ MuffiChiuaua/train/*
 MuffiChiuaua/archive.zip
 status_invest/response.json
 status_invest/stock_data/*
+b3_asset_exchange/test.ipynb
